--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
     ci:
-        runs-on: ubuntu-latest
+        runs-on: codeberg-small
         name: Continuous Integration
         steps:
             - uses: actions/checkout@v4
