--- a/.forgejo/workflows/readme-stars.yml
+++ b/.forgejo/workflows/readme-stars.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
     update-readme:
-        runs-on: ubuntu-latest
+        runs-on: codeberg-tiny
         if: ${{ vars.AOC_ENABLED == 'true' }}
         permissions:
             contents: write
