--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
     update-readme:
-        runs-on: codeberg-tiny
+        runs-on: ubuntu-latest
         if: ${{ vars.AOC_ENABLED == 'true' }}
         permissions:
             contents: write
