--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ grid = "1.0.0"     # For storing 2D grids
 strum = "0.27"          # For making enums easier to work with
 strum_macros = "0.27"
 pad = "0.1.6"
+itertools = "0.14.0"
